--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 *, html {
   -webkit-box-sizing: border-box;
@@ -37,7 +37,7 @@ html.light {
   }
 body {
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   scroll-behavior: smooth;
 }
 ul {
@@ -225,7 +225,7 @@ button {
 }
 .header .mob-nav ul.active {
   opacity: 1;
-  top: 93px;
+  top: 92px;
   visibility: visible;
 }
 .header .mob-nav ul li a:hover {
